refactor: use async/await for all services and models for consistency.
