# docs/swagger-output.json
@@ -7,9 +7,7 @@
   },
   "host": "cse341-readlyst-api.onrender.com",
   "basePath": "/",
-  "schemes": [
-    "https"
-  ],
+  "schemes": ["https"],
   "paths": {
     "/": {
       "get": {
@@ -33,9 +31,7 @@
     },
     "/books/": {
       "get": {
-        "tags": [
-          "Books"
-        ],
+        "tags": ["Books"],
         "summary": "Get all books",
         "description": "",
         "responses": {
@@ -45,9 +41,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Books"
-        ],
+        "tags": ["Books"],
         "summary": "Add a new book",
         "description": "",
         "parameters": [
@@ -69,9 +63,7 @@
     },
     "/books/{id}": {
       "get": {
-        "tags": [
-          "Books"
-        ],
+        "tags": ["Books"],
         "summary": "Get book by ID",
         "description": "",
         "parameters": [
@@ -92,9 +84,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Books"
-        ],
+        "tags": ["Books"],
         "summary": "Update a book",
         "description": "",
         "parameters": [
@@ -123,9 +113,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Books"
-        ],
+        "tags": ["Books"],
         "summary": "Delete a book",
         "description": "",
         "parameters": [
@@ -148,9 +136,7 @@
     },
     "/users/": {
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "Get all users",
         "description": "",
         "responses": {
@@ -160,9 +146,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "Create user",
         "description": "",
         "parameters": [
@@ -190,12 +174,7 @@
                   "example": "secret123"
                 }
               },
-              "required": [
-                "name",
-                "username",
-                "email",
-                "password"
-              ]
+              "required": ["name", "username", "email", "password"]
             }
           }
         ],
@@ -208,9 +187,7 @@
     },
     "/users/{id}": {
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "Get user by ID",
         "description": "",
         "parameters": [
@@ -231,9 +208,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "Update user",
         "description": "",
         "parameters": [
@@ -280,9 +255,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "Delete user",
         "description": "",
         "parameters": [
@@ -305,9 +278,7 @@
     },
     "/readlist/": {
       "get": {
-        "tags": [
-          "Readlist"
-        ],
+        "tags": ["Readlist"],
         "summary": "Get all readlist entries",
         "description": "",
         "responses": {
@@ -317,9 +288,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Readlist"
-        ],
+        "tags": ["Readlist"],
         "summary": "Add a book to a user\\'s readlist",
         "description": "",
         "parameters": [
@@ -341,9 +310,7 @@
     },
     "/readlist/{id}": {
       "get": {
-        "tags": [
-          "Readlist"
-        ],
+        "tags": ["Readlist"],
         "summary": "Get readlist entry by ID",
         "description": "",
         "parameters": [
@@ -364,9 +331,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Readlist"
-        ],
+        "tags": ["Readlist"],
         "summary": "Update a readlist entry",
         "description": "",
         "parameters": [
@@ -395,9 +360,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Readlist"
-        ],
+        "tags": ["Readlist"],
         "summary": "Remove a book from a readlist",
         "description": "",
         "parameters": [
@@ -420,9 +383,7 @@
     },
     "/reviews/": {
       "get": {
-        "tags": [
-          "Reviews"
-        ],
+        "tags": ["Reviews"],
         "summary": "Get all reviews",
         "description": "",
         "responses": {
@@ -432,9 +393,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Reviews"
-        ],
+        "tags": ["Reviews"],
         "summary": "Create a new review",
         "description": "",
         "parameters": [
@@ -456,9 +415,7 @@
     },
     "/reviews/{id}": {
       "get": {
-        "tags": [
-          "Reviews"
-        ],
+        "tags": ["Reviews"],
         "summary": "Get review by ID",
         "description": "",
         "parameters": [
@@ -479,9 +436,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Reviews"
-        ],
+        "tags": ["Reviews"],
         "summary": "Update a review",
         "description": "",
         "parameters": [
@@ -510,9 +465,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Reviews"
-        ],
+        "tags": ["Reviews"],
         "summary": "Delete a review",
         "description": "",
         "parameters": [
@@ -552,9 +505,7 @@
         },
         "genres": {
           "type": "array",
-          "example": [
-            "Genre"
-          ],
+          "example": ["Genre"],
           "items": {
             "type": "string"
           }
@@ -568,10 +519,7 @@
           "example": "http://example.com/image.jpg"
         }
       },
-      "required": [
-        "title",
-        "author"
-      ]
+      "required": ["title", "author"]
     },
     "UpdateBook": {
       "type": "object",
@@ -590,9 +538,7 @@
         },
         "genres": {
           "type": "array",
-          "example": [
-            "Genre"
-          ],
+          "example": ["Genre"],
           "items": {
             "type": "string"
           }
@@ -627,12 +573,7 @@
           "example": "secret123"
         }
       },
-      "required": [
-        "name",
-        "username",
-        "email",
-        "password"
-      ]
+      "required": ["name", "username", "email", "password"]
     },
     "UpdateUser": {
       "type": "object",
@@ -683,10 +624,7 @@
           "example": "2023-01-01T00:00:00.000Z"
         }
       },
-      "required": [
-        "user",
-        "book"
-      ]
+      "required": ["user", "book"]
     },
     "UpdateReadlist": {
       "type": "object",
@@ -737,11 +675,7 @@
           "example": "This was an amazing read!"
         }
       },
-      "required": [
-        "user",
-        "book",
-        "rating"
-      ]
+      "required": ["user", "book", "rating"]
     },
     "UpdateReview": {
       "type": "object",
