# model/readlistModel.js
@@ -4,17 +4,23 @@ const readlistSchema = require('./schemas/readlistSchema')
 const Readlist =
   mongoose.models.Readlist || mongoose.model('Readlist', readlistSchema)
 
-const findAll = () => Readlist.find({}).populate(['user', 'book'])
-const findById = id => Readlist.findById(id).populate(['user', 'book'])
+const findAll = async () => await Readlist.find({}).populate(['user', 'book'])
+
+const findById = async id =>
+  await Readlist.findById(id).populate(['user', 'book'])
+
 const create = async readlistData =>
-  (await new Readlist(readlistData).save()).populate(['user', 'book'])
-const updateById = (id, readlistData) =>
-  Readlist.findByIdAndUpdate(id, readlistData, {
+  await (await new Readlist(readlistData).save()).populate(['user', 'book'])
+
+const updateById = async (id, readlistData) =>
+  await Readlist.findByIdAndUpdate(id, readlistData, {
     returnDocument: 'after',
     runValidators: true,
   }).populate(['user', 'book'])
-const deleteById = id => Readlist.findByIdAndDelete(id)
-const deleteMany = filter => Readlist.deleteMany(filter)
+
+const deleteById = async id => await Readlist.findByIdAndDelete(id)
+
+const deleteMany = async filter => await Readlist.deleteMany(filter)
 
 module.exports = {
   Readlist,
